--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@codemirror/state": "0.19.0",
 		"@codemirror/view": "0.19.29",
+		"@types/lodash-es": "^4.17.6",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -24,6 +25,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"@tgrosinger/md-advanced-tables": "^3.8.0"
+		"@tgrosinger/md-advanced-tables": "^3.8.0",
+		"lodash-es": "^4.17.21"
 	}
 }
