--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.6",
 		"@tgrosinger/md-advanced-tables": "^3.8.0",
 		"lodash-es": "^4.17.21"
 	}
