--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,39 @@
 name: build
 
 on:
-    push:
-        branches: ["master"]
-    pull_request:
-        branches: ["master"]
-    workflow_call:
+  push:
+    branches: ['master']
+  pull_request:
+    branches: ['master']
+  workflow_call:
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-            - name: Install Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 16
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-            - name: Install dependencies
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: install
+      - name: Install dependencies
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
 
-            - name: Build production
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: build
+      - name: Build production
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build
 
-            - name: Upload artifact
-              uses: actions/upload-artifact@v3
-              with:
-                  name: artifact
-                  path: |
-                      main.js
-                      manifest.json
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact
+          path: |
+            main.js
+            manifest.json
