--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,28 @@
 name: publish
 
 on:
-    push:
-        tags:
-            - "*"
-    workflow_dispatch:
+  push:
+    tags:
+      - '*'
+  workflow_dispatch:
 
 jobs:
-    build:
-        uses: ./.github/workflows/build.yml
+  build:
+    uses: ./.github/workflows/build.yml
 
-    publish:
-        name: Publish
-        runs-on: ubuntu-latest
-        needs: [build]
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: [build]
 
-        steps:
-            - name: download artifact
-              uses: actions/download-artifact@v3
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@v3
 
-            - name: upload artifact to release
-              uses: "marvinpinto/action-automatic-releases@latest"
-              with:
-                  repo_token: "${{ secrets.GITHUB_TOKEN }}"
-                  prerelease: false
-                  files: /home/runner/work/obsidian-super-plan/obsidian-super-plan/artifact
-                  draft: false
+      - name: upload artifact to release
+        uses: 'marvinpinto/action-automatic-releases@latest'
+        with:
+          repo_token: '${{ secrets.GITHUB_TOKEN }}'
+          prerelease: false
+          files: /home/runner/work/obsidian-super-plan/obsidian-super-plan/artifact
+          draft: false
