--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-	"name": "obsidian-super-plan",
-	"version": "0.0.3",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@codemirror/state": "0.19.0",
-		"@codemirror/view": "0.19.29",
-		"@tsconfig/svelte": "^3.0.0",
-		"@types/lodash-es": "^4.17.6",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.14.47",
-		"esbuild-svelte": "^0.7.3",
-		"obsidian": "latest",
-		"svelte": "^3.55.0",
-		"svelte-preprocess": "^5.0.0",
-		"tslib": "2.4.0",
-		"typed-event-emitter": "^3.0.0",
-		"typescript": "4.7.4"
-	},
-	"dependencies": {
-		"@popperjs/core": "^2.11.6",
-		"@tgrosinger/md-advanced-tables": "^3.8.0",
-		"lodash-es": "^4.17.21"
-	}
+  "name": "obsidian-super-plan",
+  "version": "0.0.3",
+  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@codemirror/state": "0.19.0",
+    "@codemirror/view": "0.19.29",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "esbuild": "0.14.47",
+    "esbuild-svelte": "^0.7.3",
+    "obsidian": "latest",
+    "prettier": "^2.8.2",
+    "svelte": "^3.55.0",
+    "svelte-preprocess": "^5.0.0",
+    "tslib": "2.4.0",
+    "typed-event-emitter": "^3.0.0",
+    "typescript": "4.7.4"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@tgrosinger/md-advanced-tables": "^3.8.0",
+    "lodash-es": "^4.17.21"
+  }
 }
