chore: use vite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
     "baseUrl": ".",
     "types": ["node", "svelte"],
     "inlineSourceMap": false,
-    "inlineSources": true,
+    "inlineSources": false,
     "module": "ESNext",
     "target": "ES6",
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "strictNullChecks": true,
     "lib": ["DOM", "ES5", "ES6", "ES7"]
