--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "dev:esbuild": "node esbuild.config.mjs",
+    "dev": "vite build --watch --mode development",
+    "build:esbuild": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "build": "vite build",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
   "devDependencies": {
     "@codemirror/state": "0.19.0",
     "@codemirror/view": "0.19.29",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@tsconfig/svelte": "^3.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.6",
@@ -28,7 +31,8 @@
     "svelte-preprocess": "^5.0.0",
     "tslib": "2.4.0",
     "typed-event-emitter": "^3.0.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vite": "^4.0.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
