--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
-    "dev:esbuild": "node esbuild.config.mjs",
-    "dev": "vite build --watch --mode development",
-    "build:esbuild": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-    "build": "vite build",
+    "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
+    "dev:js": "npm run build:js -- --mode development",
+    "dev:web": "vite dev --config vite.config.windows.ts",
+    "build": "cross-env NODE_ENV=production run-s clear build:js build:web",
+    "build:js": "vite build --config vite.config.ts",
+    "build:web": "vite build --config vite.config.windows.ts",
+    "pack": "rimraf plugin.zip && cd dist/ && bestzip ../plugin.zip * ../main.js ../styles.css ../manifest.json",
+    "clear": "rimraf dist main.js styles.css",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
@@ -22,11 +26,16 @@
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
+    "bestzip": "^2.2.1",
     "builtin-modules": "3.3.0",
+    "cross-env": "^7.0.3",
+    "electron": "18.3.15",
     "esbuild": "0.14.47",
     "esbuild-svelte": "^0.7.3",
+    "npm-run-all": "^4.1.5",
     "obsidian": "latest",
     "prettier": "^2.8.2",
+    "rimraf": "^4.1.1",
     "svelte": "^3.55.0",
     "svelte-preprocess": "^5.0.0",
     "tslib": "2.4.0",
