--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "esbuild-svelte": "^0.7.3",
     "npm-run-all": "^4.1.5",
     "obsidian": "latest",
+    "obsidian-dataview": "^0.5.55",
     "prettier": "^2.8.2",
     "rimraf": "^4.1.1",
     "svelte": "^3.55.0",
