--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,8 @@
 	"name": "Super Plan",
 	"version": "0.0.4",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "An Obsidian plugin that helps you plan your day with full productivity.",
+	"author": "z233",
+	"authorUrl": "https://github.com/Z233",
+	"isDesktopOnly": true
 }
