--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
     "dev:js": "npm run build:js -- --mode development",
-    "dev:web": "vite dev --config vite.config.windows.ts",
+    "dev:web": "vite dev --config vite.config.window.ts",
     "build": "cross-env NODE_ENV=production run-s clear build:js build:web",
     "build:js": "vite build --config vite.config.ts",
-    "build:web": "vite build --config vite.config.windows.ts",
+    "build:web": "vite build --config vite.config.window.ts",
     "release": "run-s build pack",
     "pack": "rimraf plugin.zip && cd dist/ && bestzip ../plugin.zip * ../main.js ../styles.css ../manifest.json",
     "clear": "rimraf dist main.js styles.css",
@@ -40,10 +40,13 @@
     "rimraf": "^4.1.1",
     "svelte": "^3.55.0",
     "svelte-preprocess": "^5.0.0",
+    "svelte-windicss-preprocess": "^4.2.8",
     "tslib": "2.4.0",
     "typed-event-emitter": "^3.0.0",
     "typescript": "4.7.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-windicss": "^1.8.10",
+    "windicss": "^3.5.6"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
