--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "strictNullChecks": true,
     "lib": ["DOM", "ES5", "ES6", "ES7", "ES2021"]
   },
-  "include": ["**/*.ts", "**/*.svelte"]
+  "include": ["src/**/*"]
 }
