feat: mini tracker window

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
     "dev:js": "npm run build:js -- --mode development",
     "dev:web": "vite dev --config vite.config.window.ts",
-    "build": "cross-env NODE_ENV=production run-s clear build:js build:web",
+    "build": "cross-env NODE_ENV=production run-s clear build:web build:js ",
     "build:js": "vite build --config vite.config.ts",
     "build:web": "vite build --config vite.config.window.ts",
     "release": "run-s build pack",
     "pack": "rimraf plugin.zip && cd dist/ && bestzip ../plugin.zip * ../main.js ../styles.css ../manifest.json",
-    "clear": "rimraf dist main.js styles.css",
+    "clear": "rimraf assets window main.js styles.css",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
@@ -24,7 +24,6 @@
     "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@tsconfig/svelte": "^3.0.0",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "bestzip": "^2.2.1",
@@ -45,6 +44,7 @@
     "typed-event-emitter": "^3.0.0",
     "typescript": "4.7.4",
     "vite": "^4.0.4",
+    "vite-plugin-singlefile": "^0.13.3",
     "vite-plugin-windicss": "^1.8.10",
     "windicss": "^3.5.6"
   },
