--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "An Obsidian plugin that helps you plan your day with full productivity.",
 	"author": "z233",
 	"authorUrl": "https://github.com/Z233",
-	"isDesktopOnly": true
+	"isDesktopOnly": false
 }
