--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "strictNullChecks": true,
-    "lib": ["DOM", "ES5", "ES6", "ES7", "ES2021"]
+    "lib": ["DOM", "ES5", "ES6", "ES7", "ES2021"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   },
   "include": ["src/**/*"]
 }
