--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-table": "^8.7.9",
     "@tgrosinger/md-advanced-tables": "^3.8.0",
+    "immer": "^9.0.19",
     "lodash-es": "^4.17.21",
     "preact": "^10.13.0",
+    "use-immer": "^0.8.1",
     "zod": "^3.21.0"
   }
 }
