--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tslib": "2.4.0",
     "typed-event-emitter": "^3.0.0",
     "typescript": "4.7.4",
+    "unocss": "^0.50.4",
     "vite": "^4.0.4",
     "vite-plugin-singlefile": "^0.13.3",
     "vite-plugin-windicss": "^1.8.10",
