--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "clsx": "^1.2.1",
     "immer": "^9.0.19",
     "lodash-es": "^4.17.21",
+    "nanoid": "^4.0.1",
     "preact": "^10.13.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
