feat: add Insert new plan command

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "esbuild": "0.14.47",
     "esbuild-svelte": "^0.7.3",
     "npm-run-all": "^4.1.5",
-    "obsidian": "latest",
+    "obsidian": "^1.2.8",
     "obsidian-dataview": "^0.5.55",
     "prettier": "^2.8.2",
     "rimraf": "^4.1.1",
@@ -42,6 +42,7 @@
     "svelte-preprocess": "^5.0.0",
     "svelte-windicss-preprocess": "^4.2.8",
     "tslib": "2.4.0",
+    "type-fest": "^4.0.0",
     "typed-event-emitter": "^3.0.0",
     "typescript": "5.1.6",
     "unocss": "^0.50.4",
@@ -61,6 +62,7 @@
     "preact": "^10.13.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "sentinel-js": "^0.0.5",
     "use-immer": "^0.8.1",
     "zod": "^3.21.0"
   }
