--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "release": "run-s build pack",
     "pack": "rimraf plugin.zip && bestzip plugin.zip window main.js styles.css manifest.json",
     "clear": "rimraf assets window main.js styles.css",
-    "version": "node version-bump.mjs && git add manifest.json versions.json"
+    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
