--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "windicss": "^3.5.6"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-table": "^8.7.9",
     "@tgrosinger/md-advanced-tables": "^3.8.0",
@@ -64,6 +65,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "sentinel-js": "^0.0.5",
+    "swr": "^2.2.0",
     "use-immer": "^0.8.1",
     "zod": "^3.21.0"
   }
