--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tgrosinger/md-advanced-tables": "^3.8.0",
     "clsx": "^1.2.1",
     "immer": "^9.0.19",
+    "jotai": "^2.3.1",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.1",
     "preact": "^10.13.0",
