feat: add footer for plan table

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
+    "@unocss/preset-rem-to-px": "^0.55.4",
     "bestzip": "^2.2.1",
     "builtin-modules": "3.3.0",
     "cross-env": "^7.0.3",
@@ -46,7 +47,7 @@
     "type-fest": "^4.0.0",
     "typed-event-emitter": "^3.0.0",
     "typescript": "5.1.6",
-    "unocss": "^0.50.4",
+    "unocss": "^0.55.4",
     "vite": "^4.4.7",
     "vite-plugin-singlefile": "^0.13.3",
     "vite-plugin-windicss": "^1.8.10",
