--- a/package.json
+++ b/package.json
@@ -48,15 +48,14 @@
     "typescript": "5.1.6",
     "unocss": "^0.55.4",
     "vite": "^4.4.7",
-    "vite-plugin-singlefile": "^0.13.3",
-    "vite-plugin-windicss": "^1.8.10",
-    "windicss": "^3.5.6"
+    "vite-plugin-singlefile": "^0.13.3"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-table": "^8.7.9",
     "@tgrosinger/md-advanced-tables": "^3.8.0",
+    "@unocss/reset": "^0.56.4",
     "clsx": "^1.2.1",
     "immer": "^9.0.19",
     "jotai": "^2.3.1",
