--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "obsidian-super-plan",
   "version": "0.2.1",
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "author": "",
+  "license": "MIT",
+  "keywords": [],
   "main": "main.js",
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
@@ -14,41 +17,9 @@
     "pack": "rimraf plugin.zip && bestzip plugin.zip main.js styles.css manifest.json",
     "clear": "rimraf assets window main.js styles.css",
     "version": "node version-bump.mjs && git add manifest.json versions.json",
-    "typecheck": "tsc --noEmit"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@codemirror/state": "0.19.0",
-    "@codemirror/view": "0.19.29",
-    "@preact/preset-vite": "^2.5.0",
-    "@sveltejs/vite-plugin-svelte": "^1.4.0",
-    "@tsconfig/svelte": "^5.0.0",
-    "@types/lodash-es": "^4.17.6",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "bestzip": "^2.2.1",
-    "builtin-modules": "3.3.0",
-    "cross-env": "^7.0.3",
-    "electron": "18.3.15",
-    "esbuild": "0.14.47",
-    "esbuild-svelte": "^0.7.3",
-    "npm-run-all": "^4.1.5",
-    "obsidian": "^1.4.4",
-    "obsidian-dataview": "^0.5.55",
-    "prettier": "^2.8.2",
-    "rimraf": "^4.1.1",
-    "svelte": "^3.55.0",
-    "svelte-preprocess": "^5.0.0",
-    "svelte-windicss-preprocess": "^4.2.8",
-    "tslib": "2.4.0",
-    "type-fest": "^4.0.0",
-    "typed-event-emitter": "^3.0.0",
-    "typescript": "5.1.6",
-    "unocss": "^0.55.4",
-    "vite": "^4.4.7",
-    "vite-plugin-singlefile": "^0.13.3"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
@@ -68,5 +39,47 @@
     "swr": "^2.2.0",
     "use-immer": "^0.8.1",
     "zod": "^3.21.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^1.0.0-beta.21",
+    "@codemirror/state": "0.19.0",
+    "@codemirror/view": "0.19.29",
+    "@preact/preset-vite": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
+    "@tsconfig/svelte": "^5.0.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^20.8.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "bestzip": "^2.2.1",
+    "builtin-modules": "3.3.0",
+    "cross-env": "^7.0.3",
+    "electron": "18.3.15",
+    "esbuild": "0.14.47",
+    "esbuild-svelte": "^0.7.3",
+    "eslint": "^8.50.0",
+    "lint-staged": "^14.0.1",
+    "npm-run-all": "^4.1.5",
+    "obsidian": "^1.4.4",
+    "obsidian-dataview": "^0.5.55",
+    "prettier": "^2.8.2",
+    "rimraf": "^4.1.1",
+    "simple-git-hooks": "^2.9.0",
+    "svelte": "^3.55.0",
+    "svelte-preprocess": "^5.0.0",
+    "svelte-windicss-preprocess": "^4.2.8",
+    "tslib": "2.4.0",
+    "type-fest": "^4.0.0",
+    "typed-event-emitter": "^3.0.0",
+    "typescript": "5.1.6",
+    "unocss": "^0.55.4",
+    "vite": "^4.4.7",
+    "vite-plugin-singlefile": "^0.13.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
