--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tgrosinger/md-advanced-tables": "^3.8.0",
     "@unocss/reset": "^0.56.4",
     "clsx": "^1.2.1",
+    "foxact": "^0.2.20",
     "immer": "^9.0.19",
     "jotai": "^2.3.1",
     "lodash-es": "^4.17.21",
